# hpc-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  sourceme
.github/workflows/: ci.yml  docs.yml  publish.yml
defaults/: config.toml
docs/: HPC_MONITOR_TUI_PLAN.md  TEXTUAL_STYLING_COOKBOOK.md  cli-redesign-spec.md
docs/source/: cli.rst  conf.py  configuration.rst  getting_started.rst  index.rst  programmatic_api.rst  sge.rst
src/hpc_runner/: __init__.py
src/hpc_runner/cli/: __init__.py  cancel.py  config.py  kill.py  main.py  monitor.py  run.py  status.py  submit.py
src/hpc_runner/core/: __init__.py  config.py  descriptors.py  exceptions.py  job.py  job_array.py  job_info.py  resources.py  result.py  timeutil.py  types.py
src/hpc_runner/schedulers/: __init__.py  base.py  detection.py
src/hpc_runner/schedulers/local/: __init__.py  scheduler.py
src/hpc_runner/schedulers/local/templates/: job.sh.j2
src/hpc_runner/schedulers/sge/: __init__.py  args.py  parser.py  scheduler.py
src/hpc_runner/schedulers/sge/templates/: batch.sh.j2  interactive.sh.j2  job.sh.j2
src/hpc_runner/templates/: __init__.py
src/hpc_runner/tui/: __init__.py  app.py  snapshot.py
src/hpc_runner/tui/components/: __init__.py  detail_panel.py  filter_bar.py  filter_popup.py  job_table.py
src/hpc_runner/tui/providers/: jobs.py
src/hpc_runner/tui/screens/: __init__.py  confirm.py  job_details.py  log_viewer.py
src/hpc_runner/tui/styles/: monitor.tcss
src/hpc_runner/workflow/: __init__.py  dependency.py  pipeline.py
src/hpc_tools/: __init__.py
src/hpc_tools/cli/: cancel.py  config.py  main.py  run.py  status.py
src/hpc_tools/core/: __init__.py  job.py  job_array.py  resources.py  result.py
src/hpc_tools/schedulers/: __init__.py  base.py
src/hpc_tools/schedulers/local/: __init__.py  scheduler.py
src/hpc_tools/schedulers/sge/: __init__.py  args.py  parser.py  scheduler.py
src/hpc_tools/templates/: __init__.py  engine.py
src/hpc_tools/workflow/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py
tests/modulefiles/dummy_lib/: 2.5
tests/modulefiles/dummy_tool/: 1.0
tests/test_cli/: test_run.py  test_status.py  test_submit.py
tests/test_core/: test_config.py  test_job.py  test_resources.py  test_timeutil.py
tests/test_schedulers/: __init__.py  test_detection.py  test_local.py  test_sge.py  test_sge_parser.py  test_sge_xml_submit_time.py
tests/test_tui/: test_detail_panel.py  test_job_table.py
tests/test_workflow/: conftest.py  test_pipeline.py
